syntax = "proto3";

package stwno_mensa_api;

// The days service definition.
service Days {
  // Returns days
  rpc GetDays (DaysRequest) returns (DaysResponse) {}
}

// The days request
message DaysRequest {

}

// The days response
message DaysResponse {
  Error error = 1;
  repeated Day days = 2;
}

// The day object
message Day {
  string key = 1;
  repeated string aliases = 2;
}

// The locations service definition.
service Locations {
  // Returns locations
  rpc GetLocations (LocationsRequest) returns (LocationsResponse) {}
}

// The locations request
message LocationsRequest {

}

// The locations response
message LocationsResponse {
  Error error = 1;
  repeated Location locations = 2;
}

// The location object
message Location {
  string key = 1;
  repeated string aliases = 2;
}

// The ingredients service definition.
service Ingredients {
  // Returns ingredients
  rpc GetIngredients (IngredientsRequest) returns (IngredientsResponse) {}
}

// The ingredients request, may containing a key
message IngredientsRequest {
    string key = 1;
}

// The ingredients response
message IngredientsResponse {
  Error error = 1;
  repeated Ingredient ingredients = 2;
}

// The ingredients object
message Ingredient {
  string key = 1;
  string value = 2;
}

// The items service definition.
service Items {
  // Returns items
  rpc GetItems (ItemsRequest) returns (ItemsResponse) {}
}

// The items request, may containing arguments
message ItemsRequest {
  string location = 1;
  string day = 2;
}

// The items response
message ItemsResponse {
  Error error = 1;
  repeated Item items = 2;
}

message Item {
  string name = 1;
  string date = 2;
  string day = 3;
  string category = 4;
  repeated string labels = 5;
  repeated Ingredient ingredients = 6;

  message Price {
    string students = 1;
    string employees = 2;
    string guests = 3; 
  }
  Price price = 7;
}

message Error {
  string name = 1;
  string message = 2;
}